Encryption and decryption using Jasypt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8080
+server.servlet.contextPath=/my-application
+spring.application.name=Springboot Jasypt Encryption Decryption
+spring.profile.active=dev
